manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-discovery-service
spec:
  selector:
    app.kubernetes.io/name: eureka-discovery-service
  ports:
    - name: service
      protocol: TCP
      port: 8761
      targetPort: service
    - name: management
      port: 8081
      protocol: TCP
      targetPort: management
  type: ClusterIP
