manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: eureka-discovery-service
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: eureka.digilinq.org
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: eureka-discovery-service
            port:
              number: 8761
